update assignment week-3

--- a/week-3/style.css
+++ b/week-3/style.css
@@ -20,9 +20,68 @@
     gap: 20px;
 }
 
+.nav-menu2 {
+    max-width: 1280px;
+    max-height: 100px;
+    border: 1px solid black;
+    margin: 0 auto;
+    padding: 0 1%;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    gap: 20px;
+}
+.header-store {
+    text-align: center;
+    color: white;
+    background-color: #222222;
+    height: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 48px;
+    background-image: url(assets/header-background.jpg);
+    background-position: center center;
+    background-size:cover;
+    background-repeat: no-repeat;
+    margin-top: 140px;
+}
+.header-store h1 {
+    font-weight: bold;
+    margin: 16px;
+    animation-duration: 5s;
+    animation-name: slidein;
+    text-shadow: 1px 1px 2px white, 0 0 1em whitesmoke, 0 0 0.2em silver;
+    font-size: 3em;
+    color: rgb(243, 50, 50);
+}
+.header-store h2 {
+    text-align: center;
+    font-size: 25px;
+    margin: 0;
+    text-shadow: 1px 1px 2px rgb(243, 50, 50), 0 0 1em rgb(243, 50, 50), 0 0 0.2em rgb(243, 50, 50);
+}
+.content {
+    padding: 16px;
+}
+.sticky {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 99999;
+}
+.sticky + .content {
+    padding-top: 60px;
+}
+.header-store-mobile {
+    display: none;
+}
 body {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
+/*----------------------------------------------- header desktop ------------------------------------------------------*/
 /*membuat search bar desktop*/
 .search-container {
     border: 1px solid slategray;
@@ -42,7 +101,7 @@ form {
     text-align: center;
     
 }
-input[type=text] {
+input[type=text],input[type="email"],input[type="password" i],input[type="date"] {
     padding:6px;
     margin:3px;
     font-size: 17px;
@@ -129,7 +188,7 @@ button[type=submit] {
 a img {
     width: 20px;
 }
-a {
+a, h1 {
     text-decoration: none;
     color: black;
     display: flex;
@@ -163,7 +222,45 @@ a:hover {
 .nav-menu {
     display: none;
 }
-
+.nav-branding-mobile {
+    display: none;
+}
+/*membuat menu bawah desktop*/
+h1,h2,strong,b {
+    font-size: 14px;
+    width: 100%;
+}
+.directory {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    width: 100%;
+}
+.directory a {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    gap: 6px;
+}
+.directory a:hover {
+    position: hidden;
+    background-color: rgb(192, 27, 27); 
+    padding: 7px;
+    border: 10px;
+    border-radius: 17px;
+    margin: 0;
+}
+strong {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    gap: 6px;
+}
+/*----------------------------------------------- header mobile/tablet ------------------------------------------------------*/
 /*tampilan mobile dan tablet*/
 @media screen and (max-width:912px) {
     /* menu desktop : none */
@@ -174,6 +271,9 @@ a:hover {
         display: none;
     }
     .nav-menu1 {
+        display: none;
+    }
+    .header-store {
         display: none;
     }
     /*---------------------*/
@@ -211,10 +311,14 @@ a:hover {
         align-items: center;
         gap: 20px;
     }
+
     /*------*/
 
     /* logo branding */
-    .nav-branding img {
+    .nav-branding-mobile {
+        display: flex;
+    }
+    .nav-branding-mobile img {
         width: 80px;
     }
     /*---------------*/
@@ -244,6 +348,7 @@ a:hover {
         left: 0;
         right: 0;
         top: 0;
+        z-index: 99999;
     }
     .sticky + .content {
         padding-top: 60px;
@@ -253,7 +358,7 @@ a:hover {
     .nav-menu {
         position: fixed;
         right: -150%;
-        top: 90px;
+        top: 80px;
         gap: 0;
         flex-direction: row;
         background-color: rgb(183, 207, 207);
@@ -268,22 +373,356 @@ a:hover {
     .nav-menu.active {
         left: 0;
     }
+    .search-container {
+        border: 1px solid slategray;
+        width: 500px;
+        height: 38px;
+        border-radius: 21px;
+        background-color: rgb(223, 223, 223);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
     
-/* MENU MOBILE */
-.nav-menu a{
-    display: flex;
-    text-align: center;
-    font-size: 8px;
-    gap: 10px;
-}
-.nav-menu a:hover {
-    position: hidden;
-    background-color: rgb(192, 27, 27);
+    /* MENU MOBILE */
+    .nav-menu a{
+        display: flex;
+        text-align: center;
+        top: 80px;
+        font-size: 8px;
+        gap: 10px;
+    }
+    .nav-menu a:hover {
+        position: hidden;
+        background-color: rgb(192, 27, 27);
+    }
+
+    .nav-menu a img:hover {
+        position: hidden;
+        display: inline-block;
+        background-color: white;
+    }
+    /*footer tablet*/
+    .container {
+        width: 960px;
+        max-width: none;
+    }
+    .footer-sections {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+    }
+    .footer-section {
+        text-align: left;
+    }
+    .footer-navs li {
+        margin-bottom: 4px;
+    }
+    /*header mobile*/
+    .header-store-mobile {
+        background-image: url(assets/header-background.jpg);
+        background-position: center center;
+        background-size:cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        margin-top: 80px;
+        text-align: center;
+        color: white;
+        background-color: #222222;
+        height: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-top: 50px;
+        padding-bottom:80px;
+        margin-top: 0;
+        
+    }
+    .header-store-mobile h1 {
+        font-weight: bold;
+        animation-duration: 5s;
+        animation-name: slidein;
+        text-shadow: 1px 1px 2px white, 0 0 1em whitesmoke, 0 0 0.2em silver;
+        font-size: 1.5em;
+        color: rgb(243, 50, 50);
+    }
+    .header-store-mobile h2 {
+        text-align: center;
+        font-size: 20px;
+        margin: 0;
+        text-shadow: 1px 1px 2px rgb(243, 50, 50), 0 0 1em rgb(243, 50, 50), 0 0 0.2em rgb(243, 50, 50);
+    }
+    button[type="submit"] {
+        color:white;
+        background-color: transparent;
+        border: 1px solid white;
+        border-radius:4px;
+        width:10%;
+        padding:8px 16px;
+        font-size:16px;
+        font-weight:bold;
+        cursor:pointer;
+    }
 }
 
-.nav-menu a img:hover {
-    position: hidden;
-    display: inline-block;
-    background-color: white;
-    /*cara merubah warna img ketika hover aktif. rencananya hover pakai warna merah dan img pakai warna putih*/
+/*----------------------------------------------- main ------------------------------------------------------*/
+/* IMAGE CAROUSEL */
+/*----------------*/
+/*SECTION-PROMOTION*/
+section {
+    margin: 0 16px;
 }
+section h2 {
+    font-weight: 700px;
+    text-align: center;
+    font-size: 18px;
+    width: 100px;
+}
+#promotion-photos .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 8px;
+    grid-auto-rows: 240px 240px 240px;
+}
+.grid-container #item-1 {
+    grid-column: 1;
+    grid-row:1 / 2 span;
+}
+#promotion-photos .grid-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover ;
+}
+.promotion-photo-item {
+    filter: grayscale(100%);
+    cursor: pointer;
+}
+.promotion-photo-item:hover {
+    filter: none;
+    cursor: pointer;
+}
+.grid-container #item-2 {
+    grid-column: 2 / 3 span;
+    grid-row:1;
+}
+.grid-container #item-6 {
+    grid-column: 2 / 3 span;
+    grid-row:3;
+}
+.grid-container #item-7 {
+    grid-column: 1;
+    grid-row:3/4;
+}
+section div {
+    display: block;
+}
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+
+}
+/*-----------------*/
+
+/*----form---------*/
+input[type="text"],
+input[type="email"],input[type="password" i],input[type="date"],
+textarea {
+    width:100%;
+    padding:4px 4px;
+    margin: 8px 0;
+    display:block;
+}
+
+#form-section {
+    background-color:#000000;
+    color:white;
+    padding:8px;
+    margin-top:16px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-member {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.form-member div {
+    display: flex;
+}
+
+fieldset {
+    width: 100%;
+    padding-left: auto;
+    padding-right: auto;
+    
+}
+
+.nama {
+    width: 50%;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+fieldset div p {
+    width: 70%;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+    margin: auto 0;
+}
+fieldset div {
+    gap: 10px;
+    row-gap: 10px;
+    margin: auto;
+    padding: auto;
+}
+.living input,label {
+    gap: 10px;
+}
+
+#form-section form {
+    max-width:480px;
+    margin-left:auto;
+    margin-right:auto
+}
+
+button[type="submit"] {
+    color:white;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius:4px;
+    padding:8px 16px;
+    font-size:16px;
+    font-weight:bold;
+    cursor:pointer;
+}
+#form-section h2 {
+    text-align: center;
+    width: 100%;
+}
+
+/*-----------------*/
+
+/*-----footer-----*/
+.footer {
+    position: relative;
+    z-index: 1;
+    padding-top: 3.2em;
+    background: #fff;
+}
+footer {
+    display: block;
+    box-sizing: inherit;
+}
+.footer .container.has-border {
+    border-top: solid 5px #D5D5D5;
+}
+.container {
+    width: 95%;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+footer div {
+    display: block;
+}
+.footer-sections {
+    padding-top: 1.6em;
+    margin-left: -1.6em;
+    display: flex;
+}
+.footer-section {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    padding-left: 1.6em;
+    margin-bottom: 1.6em;
+    text-align: center ;
+}
+.footer-heading {
+    margin-bottom: 12px;
+}
+.footer-subtitle {
+    font-weight: bold !important;
+    font-size: 1em;
+    line-height: 1.6em;
+    margin: 0 0 1.6em 0;
+}
+.footer-subtitle.footer-heading {
+    display: flex;
+}
+.footer-subtitle.footer-heading img {
+    max-width: 100%;
+    vertical-align: middle;
+    border-style: none;
+}
+.list-nostyle {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.footer-subtitle.footer-heading ul {
+    font-size: 1em;
+    line-height: 1.6em;
+    margin: 0 0 1.6em 0;
+}
+.footer-subtitle ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    text-align: left;
+}
+li {
+    list-style: none;
+    text-align: left;
+}
+.footer-navs a {
+    color: currentColor;
+    text-decoration: none;
+}
+.kirim {
+    width: 10px;
+}
+.footer-subscribe {
+    display: flex;
+    flex-direction: column;
+}
+.greyBar {
+    height: 40px;
+    font-size: 22px;
+    background-color: #dddddd;
+    color: #000;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-family: 'Helvetica-light' !important;
+
+}
+.darkBar {
+    height:23px;
+    font-size: 10px;
+    background-color: #1a1a1a;
+    color: #aeaeae;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+/*----------------*/
